docs(decisions): add §21 Java implementation architecture
Architecture decisions for the Java implementation:
- Java 25 as baseline (newest LTS, modern features)
- Maven as build system
- Single-module structure (com.optimeas.osf)
- Jackson + StAX + JUnit 5/AssertJ + SLF4J as dependencies
- Block-write plus streaming-write (embedded use case)
- JPMS enabled with module-info.java
- ByteBuffer-on-FileChannel for binary I/O

Discussion held in a separate Claude.ai chat session;
this commit captures the conclusions.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>